[gd_scene load_steps=10 format=3 uid="uid://8x58tta0qqba"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_juf0d"]
[ext_resource type="Script" path="res://Player/CameraController.gd" id="2_g0a1u"]
[ext_resource type="PackedScene" uid="uid://l74n0yf6rq88" path="res://UI/Menu.tscn" id="3_v0xr3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8x2xm"]
radius = 0.2
height = 1.8

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_gqx4v"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_2ooex"]
dof_blur_far_enabled = true
dof_blur_far_distance = 45.0
dof_blur_amount = 0.01

[sub_resource type="CylinderShape3D" id="CylinderShape3D_a3ijt"]
height = 1.8
radius = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_ps6li"]
radius = 1.4

[sub_resource type="SphereShape3D" id="SphereShape3D_ctdnu"]
radius = 1.129

[node name="Player" type="CharacterBody3D" groups=["damageables"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_juf0d")

[node name="CharacterCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_8x2xm")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.41345, 0)
top_level = true
script = ExtResource("2_g0a1u")
invert_mouse_y = true
tilt_upper_limit = 1.0
tilt_lower_limit = -0.8

[node name="CameraOverShoulderPivot" type="Marker3D" parent="CameraController"]
transform = Transform3D(-0.994522, 0.0400013, -0.0965717, 0, 0.92388, 0.382683, 0.104528, 0.380587, -0.918818, -0.878379, 2.79735, -2.61076)

[node name="CameraSpringArm" type="SpringArm3D" parent="CameraController"]
transform = Transform3D(-1, -5.15034e-15, -8.74228e-08, -3.23484e-08, 0.929023, 0.370022, 8.12178e-08, 0.370022, -0.929023, 3.84821e-15, 1.6457, -0.276471)
shape = SubResource("SeparationRayShape3D_gqx4v")
spring_length = 5.0

[node name="CameraThirdPersonPivot" type="Marker3D" parent="CameraController/CameraSpringArm"]
transform = Transform3D(1, 0, -2.84217e-14, 0, 1, 0, 0, 0, 1, 1.27898e-13, 4.76837e-07, 4.78007)

[node name="PlayerCamera" type="Camera3D" parent="CameraController"]
transform = Transform3D(-1, -3.71248e-14, -8.74228e-08, -3.23484e-08, 0.929023, 0.370022, 8.12178e-08, 0.370022, -0.929023, -4.16537e-07, 3.40872, -4.70292)
top_level = true
attributes = SubResource("CameraAttributesPractical_2ooex")
fov = 60.0

[node name="CameraRayCast" type="RayCast3D" parent="CameraController/PlayerCamera"]
transform = Transform3D(1, 0, -7.10543e-15, 0, 1, 0, 0, 0, 1, 0, 0, 0)
target_position = Vector3(0, 0, -100)
debug_shape_custom_color = Color(0, 0, 0, 0)

[node name="HeadRoot" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.61403, 0)
size = Vector3(0.5, 0.5, 0.5)

[node name="CharacterRotationRoot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.837648, 0)

[node name="BodyRoot" type="CSGCylinder3D" parent="CharacterRotationRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15768, 0)
radius = 0.2
height = 1.19562

[node name="LeftHand" type="CSGBox3D" parent="CharacterRotationRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.385269, 0)
size = Vector3(0.2, 0.2, 0.2)

[node name="RightHand" type="CSGBox3D" parent="CharacterRotationRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.321269, 0)
size = Vector3(0.2, 0.2, 0.2)

[node name="LeftShoulder" type="Node3D" parent="CharacterRotationRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.202312, 0.384522, 0)

[node name="RightShoulder" type="Node3D" parent="CharacterRotationRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.205843, 0.384522, 0)

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="CharacterRotationRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.776377, 0)
remote_path = NodePath("../../HeadRoot")
update_rotation = false
update_scale = false

[node name="LandingSound" type="AudioStreamPlayer3D" parent="."]
volume_db = 1.0

[node name="GroundShapeCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_a3ijt")
target_position = Vector3(0, 0.5, 0)
max_results = 1
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="Menu" parent="." instance=ExtResource("3_v0xr3")]
visible = false

[node name="ClimbArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.971179, 0)
visible = false

[node name="ClimbCollision" type="CollisionShape3D" parent="ClimbArea"]
visible = false
shape = SubResource("SphereShape3D_ps6li")

[node name="ClimbShapeCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04569, 0)
shape = SubResource("SphereShape3D_ctdnu")
target_position = Vector3(0, 0, 0)
